--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         </p>
       </div>  
     </div>
+   <h5 style="text-align: center;">Some of my projects are availabe on my GitHub account, Link is in 'CONTACT' section.</h5>
   </section>
   <!--skills-->
   <section id="skills">
