--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
         </p>
       </div>  
     </div>
+    <div class="row" >  
+      <div class="col-lg-8" style="padding:5%;">
+        <h1 style="color: rgb(233, 216, 196);font-family: 'Shadows Into Light', cursive;">Healthcare Web App</h1>
+          <h4>Skills: HTML,CSS,JS,Bootstrap,NodeJS and API</h4>
+          <br>
+          <p>A Healthcare Dashboard web app.Public API used: <a href="https://apify.com/covid-19">Apify</a>.</p>
+          <p>Features:<br> 1. Covid Data of India at one place.<br>
+            2. Easy search by the State/U.T. name.<br>
+            3. Data is obtained from: <a href=" https://www.mohfw.gov.in/">Mohfw Website</a>
+          </p>
+        </div> 
+      <div class="col-lg-4" style="padding:5%;">
+        <i class="fas fa-viruses fa-10x"></i>
+      </div>
+    </div>
+    </div>
    <h5 style="text-align: center;">Some of my projects are available on my GitHub account, Link is in 'CONTACT' section.</h5>
   </section>
   <!--skills-->
